--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start:prod": "cross-env NODE_ENV=production nodemon server.js",
+    "lint": "eslint ."
   },
   "author": "ajun",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.4.4",
+    "morgan": "^1.10.0",
+    "prettier": "^3.3.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "globals": "^15.7.0"
   }
 }
