--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
