--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "learning node express and mongo db",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "nodemon api/server.js",
+    "start": "node api/server.js",
     "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
